# simde

./: .appveyor.yml  .azure-pipelines.yml  .codecov.yml  .travis.yml
.github/workflows/: ci.yml
simde/: simde-common.h  simde-constify.h  simde-math.h
simde/arm/: neon.h
simde/arm/neon/: cgt.h  cgtz.h  ld3.h  ld4.h  mvn.h  rshr_n.h  rsra_n.h  st3.h  st4.h  tst.h  types.h
simde/x86/: sse.h  sse2.h
test/: CMakeLists.txt  test.h
test/arm/neon/: declare-suites.h  meson.build  test-neon-footer.h
test/x86/: test-x86-footer.h
x86/: avx.h  avx2.h  avx512bw.h  avx512cd.h  avx512dq.h  avx512f.h  avx512vl.h  fma.h  gfni.h  mmx.h  sse.h  sse2.h  sse3.h  sse4.1.h  sse4.2.h  ssse3.h  svml.h
